--- a/index.html
+++ b/index.html
@@ -25,5 +25,14 @@
     <iframe src="https://share.streamlit.io/chorozuya/streamlit-demo/main/nurie.py">
         Your browser doesn't support iframes
     </iframe>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P81X9242FR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-P81X9242FR');
+    </script>
   </body>
 </html>
