--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ぬり絵ジェネレータ</title>
 
-    <style>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>ぬり絵ジェネレータ</title>
+
+  <style>
     body {
       margin: 0;
     }
@@ -18,22 +19,38 @@
       height: 100vh;
       width: 100vw;
     }
-    </style>
+  </style>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P81X9242FR"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-P81X9242FR"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-      gtag('config', 'G-P81X9242FR');
-    </script>
+    gtag('config', 'G-P81X9242FR');
+  </script>
 
-  </head>
-  <body>
-    <iframe src="https://share.streamlit.io/chorozuya/streamlit-demo/main/nurie.py">
-        Your browser doesn't support iframes
-    </iframe>
-  </body>
+  <!-- Twitter universal website tag code -->
+  <script>
+    !function (e, t, n, s, u, a) {
+      e.twq || (s = e.twq = function () {
+        s.exe ? s.exe.apply(s, arguments) : s.queue.push(arguments);
+      }, s.version = '1.1', s.queue = [], u = t.createElement(n), u.async = !0, u.src = '//static.ads-twitter.com/uwt.js',
+        a = t.getElementsByTagName(n)[0], a.parentNode.insertBefore(u, a))
+    }(window, document, 'script');
+    // Insert Twitter Pixel ID and Standard Event data below
+    twq('init', 'o8zvd');
+    twq('track', 'PageView');
+  </script>
+  <!-- End Twitter universal website tag code -->
+
+</head>
+
+<body>
+  <iframe src="https://share.streamlit.io/chorozuya/streamlit-demo/main/nurie.py">
+    Your browser doesn't support iframes
+  </iframe>
+</body>
+
 </html>
